# xuehua

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  configuration.nix  flake.nix  justfile
.github/workflows/: ci.yml  engine.yml  nix-archive.yml  testing.yml
archive/: .gitignore  Cargo.toml  specification.md  test
archive/src/: compression.rs  decoding.rs  decompression.rs  dictionary.rs  encoding.rs  hashing.rs  lib.rs  packing.rs  prefixes.rs  unpacking.rs  utils.rs
archive/src/dictionary/: filesystem.rs
archive/src/prefixes/: filesystem.rs
archive/tests/: main.rs  utils.rs
archive/tests/blobs/: dummy  engine.xhar
backend-lua/: Cargo.toml
backend-lua/src/: lib.rs
cli/: Cargo.toml
cli/src/: archive.rs  main.rs  options.rs  package.rs
cli/src/options/: base.rs  cli.rs
cli/store/: store.sqlite
cli/xuehua/: main.lua
config/root/: init
crates/: .gitignore
crates/archive/: Cargo.toml  specification.md
crates/archive/src/: decoding.rs  encoding.rs  lib.rs  packing.rs  unpacking.rs  utils.rs
crates/archive/tests/: main.rs  utils.rs
crates/backend-alpine/: .gitignore  Cargo.toml
crates/backend-alpine/src/: decoding.rs  lib.rs
crates/backend-arch/: Cargo.toml
crates/backend-arch/src/: lib.rs
crates/backend-lua/: Cargo.toml
crates/backend-lua/src/: lib.rs  logger.rs
crates/cli/: Cargo.toml
crates/cli/src/: archive.rs  log.rs  main.rs  options.rs  package.rs
crates/cli/src/options/: action.rs  base.rs  cli.rs
crates/cli/src/options/action/: definition.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  serde_display.rs
crates/engine/: Cargo.toml
crates/engine/src/: backend.rs  builder.rs  encoding.rs  executor.rs  lib.rs  linker.rs  name.rs  package.rs  planner.rs  scheduler.rs  store.rs  utils.rs
crates/engine/src/package/: manifest.rs
crates/engine/src/planner/: config.rs
crates/engine/src/store/: empty.rs
crates/engine/src/utils/: passthru.rs
crates/executor-bubblewrap/: Cargo.toml
crates/executor-bubblewrap/src/: lib.rs
crates/executor-compression/: Cargo.toml
crates/executor-compression/src/: lib.rs  zstd.rs
crates/executor-http/: Cargo.toml
crates/executor-http/src/: lib.rs
crates/linker-file/: Cargo.toml
crates/linker-file/src/: lib.rs
crates/query/: Cargo.toml  build.rs
crates/query-derive/: Cargo.toml
crates/query-derive/src/: lib.rs
crates/query/src/: database.rs  engine.rs  handle.rs  lib.rs  migration.rs  singleflight.rs  store.rs
crates/query/src/database/: evict.rs  fallible.rs  in_memory.rs  lru.rs  persist.rs
crates/query/src/database/evict/: lru.rs
crates/query/src/database/persist/: fingerprinting.rs  postcard.rs
crates/reports/: Cargo.toml
crates/reports-derive/: Cargo.toml
crates/reports-derive/src/: lib.rs
crates/reports/src/: compat.rs  lib.rs  prelude.rs  render.rs  tracing.rs
crates/reports/src/render/: global.rs  json.rs  pretty.rs  simple.rs
crates/store-sqlite/: Cargo.toml
crates/store-sqlite/src/: initialize.sql  lib.rs
doc/: book.toml
doc/src/: SUMMARY.md
doc/src/engine/: migration.md
doc/src/engine/implementation/: backends.md  executors.md  stores.md
doc/src/package-manager/: getting-started.md  installation.md  nix-comparison.md
engine/: Cargo.toml  engine.mmd
engine/src/: backend.rs  builder.rs  executor.rs  lib.rs  modules.rs  package.rs  planner.rs  scheduler.rs  store.rs  utils.rs
engine/src/backend/: lua.rs
engine/src/backend/lua/: logger.rs
engine/src/executor/: http.rs  runner.rs
engine/src/executor/runner/: bubblewrap.rs
engine/src/modules/: executor.rs  planner.rs  resolver.rs  store.rs
engine/src/modules/builder/: bubblewrap.rs
engine/src/modules/executor/: bubblewrap.rs
engine/src/modules/store/: local.rs  store.dbml
engine/src/package/: id.rs  manifest.rs
engine/src/planner/: config.rs
engine/src/store/: empty.rs  local.rs
engine/src/store/local/: initialize.sql
executor-bubblewrap/: Cargo.toml
executor-bubblewrap/src/: lib.rs
executor-http/: Cargo.toml
executor-http/src/: lib.rs
nix/: build-etc.nix  configuration.nix  default.nix  init.sh  initrd.nix  system.nix
nix-archive/: Cargo.toml  README.md
nix-archive-format/: Cargo.toml
nix-archive-format/src/: decoding.rs  encoding.rs  lib.rs  state.rs  utils.rs
nix-archive-format/src/state/: arbitrary.rs
nix-archive-format/src/utils/: log.rs
nix-archive/blobs/: README.md
nix-archive/src/: arbitrary.rs  coder.rs  decoding.rs  encoding.rs  filesystem.rs  lib.rs  packing.rs  state.rs  unpacking.rs  utils.rs  validation.rs
nix-archive/src/coder/: decoding.rs  encoding.rs
nix-archive/src/filesystem/: packing.rs  unpacking.rs
nix-archive/src/state/: arbitrary.rs
nix-archive/src/utils/: log.rs
nix-archive/src/validation/: arbitrary.rs
nix-archive/tests/: main.rs  utils.rs
nix-archive/tests/blobs/: .gitignore  README.md  generate.sh
nix/utils/: alpine.nix  default.nix  openrc.nix  squashfs.nix
reports/: Cargo.toml
reports-derive/: Cargo.toml
reports-derive/src/: lib.rs
reports/src/: compat.rs  lib.rs  prelude.rs  render.rs
reports/src/render/: human.rs  json.rs  pretty.rs  simple.rs
src/: error.rs  evaluator.rs  main.rs  package.rs  pkgsys.rs
src/engine/: planner.rs
src/options/: base.rs  cli.rs
src/package/: build.rs  eval.rs  namespace.rs
src/pkgsys/: namespace.rs  package.rs
src/pkgsys/package/: build.rs  dependencies.rs
src/store/: fetcher.rs
store-local/: Cargo.toml
store-local/src/: lib.rs
xuehua/: 1.lua  2.lua  main.lua
