[workspace]
resolver = "3"
members = [
  "archive",
  "backend-lua","cli",
  "engine",
  "executor-bubblewrap",
  "executor-http",
  "reports",
  "reports-derive",
  "store-local"
]

[workspace.dependencies]
xh-archive = { path = "archive", features = ["std", "mmap"] }
xh-engine = { path = "engine" }
xh-reports = { path = "reports" }
tempfile = "3.23.0"
tokio = "1.48.0"
petgraph = "0.8.3"
bytes = "1.11.0"
serde_json = "1.0.149"
memmap2 = "0.9.9"
ed25519-dalek = "3.0.0-pre.4"
smol_str = "0.3.4"
fern = "0.7.1"
log = { version = "0.4.27", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
blake3 = { version = "1.8.2", default-features = false }
educe = { version = "0.6.0", features = ["Debug", "Clone", "Default"] }
jiff = { version = "0.2.15", default-features = false, features = ["alloc", "std", "perf-inline"] }
mlua = { version = "0.11.4", features = ["lua54"] }
rusqlite = "0.38.0"
