[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
xh-archive = { path = "crates/archive", features = ["mmap"] }
xh-engine = { path = "crates/engine" }
xh-reports = { path = "crates/reports" }
xh-common = { path = "crates/common" }
xh-executor-http = { path = "crates/executor-http" }
xh-executor-bubblewrap = { path = "crates/executor-bubblewrap" }
xh-executor-compression = { path = "crates/executor-compression" }
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "macros"] }
petgraph = "0.8.3"
bytes = "1.11.0"
serde_json = "1.0.149"
memmap2 = "0.9.9"
ed25519-dalek = "3.0.0-pre.5"
smol_str = "0.3.5"
blake3 = "1.8.3"
fastrand = "2.3.0"
log = { version = "0.4.29", features = ["std", "kv", "kv_std"] }
serde = { version = "1.0.228", features = ["derive"] }
educe = { version = "0.6.0", features = ["Debug", "Clone", "Default", "PartialEq", "Eq"] }
jiff = { version = "0.2.18", default-features = false, features = ["alloc", "std", "perf-inline"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = "2.0.117"
