[package]
name = "xh-archive"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
test = false

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[features]
default = ["std", "mmap"]
std = ["blake3/std", "thiserror/std"]
mmap = ["dep:memmap2"]
log = ["dep:log"]

[dependencies]
log = { workspace = true, optional = true }
blake3.workspace = true
thiserror.workspace = true
bytes = "1.11.0"
memmap2 = { version = "0.9.9", optional = true }

[dev-dependencies]
tempfile.workspace = true
arbitrary = "1.4.2"
arbtest = "0.3.2"
fern.workspace = true
include_dir = "0.7.4"
libtest-mimic = "0.8.1"
