[package]
name = "xh-archive"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
test = false

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[features]
default = ["std"]
std = ["blake3/std", "thiserror/std"]
mmap = ["dep:memmap2"]
log = ["dep:log"]

[dependencies]
log = { workspace = true, optional = true }
blake3.workspace = true
thiserror.workspace = true
bytes.workspace = true
memmap2 = { workspace = true, optional = true }
ed25519-dalek.workspace = true

[dev-dependencies]
log.workspace = true
tempfile.workspace = true
fern.workspace = true
arbitrary = "1.4.2"
arbtest = "0.3.2"
include_dir = "0.7.4"
libtest-mimic = "0.8.1"
