[package]
name = "xh-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xh"
path = "src/main.rs"

[dependencies]
fern.workspace = true
eyre = { version = "0.6.12", default-features = false, features = ["track-caller"] }
xh-engine = { path = "../engine", features = ["bubblewrap-executor", "http-executor", "local-store"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
log.workspace = true
petgraph.workspace = true
mlua.workspace = true
bpaf = { version = "0.9.20", features = ["bright-color"] }
jiff.workspace = true
tempfile.workspace = true
dirs = "6.0.0"
