[package]
name = "xh-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xh"
path = "src/main.rs"

[dependencies]
xh-engine = { path = "../engine", features = ["bubblewrap-executor", "http-executor", "local-store"] }
xh-archive.workspace = true
eyre = { version = "0.6.12", default-features = false, features = ["track-caller"] }
bpaf = { version = "0.9.20", features = ["bright-color"] }
dirs = "6.0.0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
fern.workspace = true
memmap2.workspace = true
log.workspace = true
petgraph.workspace = true
mlua.workspace = true
jiff.workspace = true
tempfile.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
