[package]
name = "xh-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xh"
path = "src/main.rs"

[dependencies]
xh-engine.workspace = true
xh-archive.workspace = true
xh-reports = { workspace = true }
xh-executor-http = { path = "../executor-http" }
xh-executor-bubblewrap = { path = "../executor-bubblewrap" }
xh-store-local = { path = "../store-local" }
xh-backend-lua = { path = "../backend-lua" }
memmap2.workspace = true
log = { workspace = true, features = ["kv_std"] }
petgraph.workspace = true
jiff.workspace = true
tempfile.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
dirs = "6.0.0"
bpaf = { version = "0.9.20", features = ["bright-color"] }
