[package]
name = "xh-engine"
version = "0.1.0"
edition = "2024"

[features]
bubblewrap-executor = ["tokio/process"]
http-executor = ["dep:ureq", "dep:http-serde"]
local-store = ["dep:rusqlite"]

[dependencies]
petgraph.workspace = true
mlua.workspace = true
log.workspace = true
serde.workspace = true
jiff.workspace = true
thiserror.workspace = true
serde_json.workspace = true
xh-archive.workspace = true
ed25519-dalek.workspace = true
bytes.workspace = true
memmap2.workspace = true
tokio = { workspace = true, features = ["sync"] }
blake3 = { workspace = true, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
rusqlite = { version = "0.37.0", features = ["jiff"], optional = true }
ureq = { version = "3.1.2", optional = true }
http-serde = { version = "2.1.1", optional = true }
smol_str = "0.3.4"
derivative = "2.2.0"
fastrand = "2.3.0"
