[package]
name = "xh-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
petgraph.workspace = true
log.workspace = true
serde.workspace = true
jiff.workspace = true
thiserror.workspace = true
serde_json.workspace = true
xh-archive.workspace = true
ed25519-dalek.workspace = true
bytes.workspace = true
memmap2.workspace = true
derivative.workspace = true
blake3 = { workspace = true, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
smol_str = "0.3.4"
fastrand = "2.3.0"
