[package]
name = "nix-archive"
version = "0.2.2"
edition = "2024"
description = "Minimal encoder and decoder for the Nix Archive Format"
repository = "https://github.com/CelestialCrafter/xuehua"
license = "MPL-2.0"
keywords = ["nix", "nar", "archive", "encoding", "decoding"]
categories = ["encoding", "parser-implementations"]

[features]
log = ["dep:log"]

[dependencies]
thiserror = "2.0.17"
arbitrary = "1.4.2"
bytes = "1.11.0"
log = { workspace = true, optional = true }

[dev-dependencies]
arbtest = "0.3.2"
