[package]
name = "nix-archive"
version = "0.2.2"
edition = "2024"
description = "Minimal encoder and decoder for the Nix Archive Format"
repository = "https://github.com/CelestialCrafter/xuehua"
license = "MPL-2.0"
keywords = ["nix", "nar", "no_std", "encoding"]
categories = ["no-std", "encoding", "parser-implementations"]

[features]
default = ["std"]
std = ["bytes/std", "thiserror/std"]
log = ["dep:log", "std"]

[dependencies]
thiserror = { version = "2.0.17", default-features = false }
bytes = { version = "1.11.0", default-features = false }
log = { workspace = true, optional = true }

[dev-dependencies]
anyhow = "1.0.100"
arbitrary = "1.4.2"
arbtest = "0.3.2"
