[package]
name = "xh-reports"
version = "0.1.0"
edition = "2024"

[features]
default = ["std", "pretty"]
std = []
auto-erase = []
pretty = ["dep:owo-colors"]
json = ["dep:serde_json"]

[dependencies]
xh-reports-derive = { path = "../reports-derive" }
thiserror.workspace = true
educe.workspace = true
smol_str.workspace = true
log = { workspace = true, features = ["kv"] }
serde_json = { workspace = true, optional = true }
owo-colors = { version = "4.2.3", optional = true }
smallvec = "1.15.1"
