[package]
name = "xh-archive"
version = "0.1.0"
edition = "2024"
autotests = false

[lib]
test = false

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[features]
mmap = ["dep:memmap2"]

[dependencies]
xh-reports.workspace = true
xh-common.workspace = true
blake3.workspace = true
bytes.workspace = true
smol_str.workspace = true
ed25519-dalek.workspace = true
memmap2 = { workspace = true, optional = true }
tracing = { workspace = true, features = ["release_max_level_off"] }

[dev-dependencies]
xh-reports = { workspace = true, features = ["json"] }
tempfile.workspace = true
tracing-subscriber.workspace = true
arbitrary = "1.4.2"
arbtest = "0.3.2"
include_dir = "0.7.4"
libtest-mimic = "0.8.1"
