[package]
name = "xh-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xh"
path = "src/main.rs"

[dependencies]
xh-engine.workspace = true
xh-archive.workspace = true
xh-reports.workspace = true
xh-executor-http.workspace = true
xh-executor-bubblewrap.workspace = true
xh-executor-compression.workspace = true
xh-store-sqlite = { path = "../store-sqlite" }
xh-backend-lua = { path = "../backend-lua" }
xh-backend-arch = { path = "../backend-arch" }
memmap2.workspace = true
smol_str.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
educe.workspace = true
petgraph.workspace = true
jiff.workspace = true
tempfile.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
tokio.workspace = true
dirs = "6.0.0"
pico-args = "0.5.0"
owo-colors = "4.3.0"
