[package]
name = "xh-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "xh"
path = "src/main.rs"

[dependencies]
xh-engine.workspace = true
xh-archive.workspace = true
xh-reports = { workspace = true, features = ["pretty"] }
xh-executor-http = { path = "../executor-http" }
xh-executor-bubblewrap = { path = "../executor-bubblewrap" }
xh-store-sqlite = { path = "../store-sqlite" }
xh-backend-lua = { path = "../backend-lua" }
xh-backend-arch = { path = "../backend-arch" }
memmap2.workspace = true
log.workspace = true
petgraph.workspace = true
jiff.workspace = true
tempfile.workspace = true
bytes.workspace = true
ed25519-dalek.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
dirs = "6.0.0"
bpaf = { version = "0.9.22", features = ["bright-color"] }
