[package]
name = "xh-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
xh-reports.workspace = true
xh-common.workspace = true
petgraph.workspace = true
log.workspace = true
serde.workspace = true
jiff.workspace = true
serde_json.workspace = true
xh-archive.workspace = true
ed25519-dalek.workspace = true
bytes.workspace = true
memmap2.workspace = true
educe.workspace = true
smol_str.workspace = true
blake3.workspace = true
futures-util = "0.3.31"
