[package]
name = "xh-query"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
educe.workspace = true
rustc-hash = "2.1.1"
tokio = { workspace = true, features = ["rt", "sync"] }
boxcar = "0.2.14"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "alloc"] }
linkme = "0.3.36"
xh-query-derive = { path = "../query-derive" }

[dev-dependencies]
arbitrary = "1.4.2"
arbtest = "0.3.2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
