[package]
name = "xh-query"
version = "0.1.0"
edition = "2024"

[features]
default = ["inventory"]
inventory = ["dep:inventory"]

[dependencies]
log.workspace = true
educe.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
boxcar = "0.2.14"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "alloc"] }
xh-query-derive = { path = "../query-derive" }
inventory = { optional = true, version = "0.3.24" }
rapidhash = { version = "4.4.1", features = ["unsafe"] }
bytes.workspace = true

[dev-dependencies]
arbitrary = "1.4.2"
arbtest = "0.3.2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
