[package]
name = "xh-query"
version = "0.1.0"
edition = "2024"

[features]
default = ["inventory", "postcard"]
inventory = ["dep:inventory"]
postcard = ["dep:postcard", "dep:serde"]

[dependencies]
log.workspace = true
educe.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
boxcar = "0.2.14"
futures-util = { version = "0.3.32", default-features = false, features = ["std", "alloc"] }
xh-query-derive = { path = "../query-derive" }
inventory = { optional = true, version = "0.3.24" }
rapidhash = { version = "4.4.1", features = ["unsafe"] }
bytes.workspace = true
serde = { optional = true, workspace = true, features = ["derive"] }
postcard = { optional = true, version = "1.1.3", default-features = false, features = ["alloc"] }

[dev-dependencies]
arbitrary = "1.4.2"
arbtest = "0.3.2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[build-dependencies]
getrandom = "0.4.2"
