[package]
name = "xh-reports"
version = "0.1.0"
edition = "2024"

[features]
pretty = ["dep:owo-colors"]
json = ["dep:serde_json"]

[dependencies]
xh-reports-derive = { path = "../reports-derive" }
educe.workspace = true
smol_str.workspace = true
log.workspace = true
serde_json = { workspace = true, optional = true }
owo-colors = { version = "4.2.3", optional = true }
